--- a/public/map.html
+++ b/public/map.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>GPS Tracker</title>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADy_ICv76T9DSsLQQPsXDmsN-IV2TV73k&callback=initMap"></script>
+  <script src=YOUR_API_KEY></script>
   <script>
     async function fetchLocation() {
       const response = await fetch("http://localhost:5000/latest-location");
